--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+
 </html>
